# free-rust-os

./: Cargo.toml  memory.x
.cargo/: config.toml
.zed/: settings.json
src/: kernel.rs  main.rs  port.rs  rtos.rs
src/kernel/: list.rs  scheduler.rs  task.rs  types.rs
src/port/: cortex_m3.rs
src/rtos/: heap.rs  itc.rs  kernel.rs  port.rs
src/rtos/heap/: heap_1.rs
src/rtos/itc/: mutex.rs  queue.rs  semaphore.rs
src/rtos/kernel/: config.rs  list.rs  scheduler.rs  task.rs  types.rs
src/rtos/port/: cortex_m3.rs  cortex_m7.rs
