[package]
name = "rtos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[features]
default = ["cortex-m3"]
cortex-m3 = []
